@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-07-25T12:48:43Z",
-  "count_outdated" : 9251,
-  "uniques_outdated" : 4448,
+  "timestamp" : "2025-07-26T01:53:49Z",
+  "count_outdated" : 9259,
+  "uniques_outdated" : 4455,
   "count" : 9330,
   "uniques" : 4510,
   "clones" : [
-    {
-      "timestamp": "2025-07-11T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 8 ],
-      "count_decinc": [ 7, 8 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 7 ],
-      "uniques_decinc": [ 6, 7 ]
-    },
     {
       "timestamp": "2025-07-12T00:00:00Z",
       "count": 7,
